--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,8 @@
 platform = espressif8266
 board = nodemcu
 framework = arduino
-lib_deps = plageoj/UrlEncode@^1.0.1
+monitor_speed=115200
+lib_deps = 
+    plageoj/UrlEncode@^1.0.1
+    me-no-dev/ESPAsyncTCP@^1.2.2
+    
