--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,9 @@
 platform = espressif8266
 board = nodemcu
 framework = arduino
-monitor_speed=115200
+monitor_speed = 115200
 lib_deps = 
-    plageoj/UrlEncode@^1.0.1
-    me-no-dev/ESPAsyncTCP@^1.2.2
-    
+	plageoj/UrlEncode@^1.0.1
+	me-no-dev/ESPAsyncTCP@^1.2.2
+	adafruit/DHT sensor library@^1.4.4
+	adafruit/Adafruit Unified Sensor@^1.1.13
