--- a/platformio.ini
+++ b/platformio.ini
@@ -13,8 +13,10 @@ platform = espressif8266
 board = nodemcu
 framework = arduino
 monitor_speed = 115200
+board_build.filesystem = littlefs
 lib_deps = 
 	plageoj/UrlEncode@^1.0.1
 	me-no-dev/ESPAsyncTCP@^1.2.2
 	adafruit/DHT sensor library@^1.4.4
 	adafruit/Adafruit Unified Sensor@^1.1.13
+	me-no-dev/ESP Async WebServer@^1.2.3
